--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,9 @@ jobs:
          node-version: '20'
          cache: 'pnpm'
 
+     - name: Install pnpm
+       run: npm install -g pnpm
+
      - name: Install dependencies
        run: pnpm install
 
