--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,11 +21,15 @@ jobs:
        uses: actions/setup-node@v4
        with:
          node-version: '20'
-         cache: 'pnpm'
+#         cache: 'pnpm'
+
      - name: Install pnpm
        uses: pnpm/action-setup@v3
        with:
          version: 8 # Use your project's required version
+
+     - name: Check pnpm version
+       run: pnpm --version || echo 'pnpm not found'
 
      - name: Install dependencies
        run: pnpm install
@@ -43,12 +47,15 @@ jobs:
        uses: actions/setup-node@v4
        with:
          node-version: '20'
-         cache: 'pnpm'
+#         cache: 'pnpm'
 
      - name: Install pnpm
        uses: pnpm/action-setup@v3
        with:
          version: 8 # Use your project's required version
+
+     - name: Check pnpm version
+       run: pnpm --version || echo 'pnpm not found'
 
      - name: Install dependencies
        run: pnpm install
