feat: Install and configure Turbo for monorepo build optimization
- Added Turbo v2.5.4 as workspace dev dependency
- Created turbo.json with optimized pipeline configuration
- Configured build, test, lint, dev, clean, and type-check tasks
- Set up dependency ordering and intelligent caching
- Updated package.json scripts to use Turbo instead of direct pnpm
- Added comprehensive Turbo setup guide documentation
- Updated main README to indicate Turbo-powered scripts

Benefits:
- Intelligent caching skips unchanged work
- Dependency-aware task execution
- Parallel processing across CPU cores
- Incremental builds for faster development

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Nexus workspace with comprehensive pnpm workspace structure",
   "private": true,
   "scripts": {
-    "build": "pnpm -r build",
-    "test": "pnpm -r test",
-    "lint": "pnpm -r lint",
-    "dev": "pnpm -r dev",
-    "clean": "pnpm -r clean",
+    "build": "turbo build",
+    "test": "turbo test",
+    "lint": "turbo lint",
+    "dev": "turbo dev",
+    "clean": "turbo clean",
+    "type-check": "turbo type-check",
     "install:all": "pnpm install",
     "update:all": "pnpm -r update"
   },
@@ -20,7 +21,9 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.11.1",
-  "devDependencies": {},
+  "devDependencies": {
+    "turbo": "^2.5.4"
+  },
   "engines": {
     "node": ">=18.0.0",
     "pnpm": ">=8.0.0"
