--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "license": "ISC",
   "packageManager": "pnpm@10.11.1",
   "devDependencies": {
-    "turbo": "^2.5.4"
+    "turbo": "^2.5.4",
+    "typescript": "^5.8.3"
   },
   "engines": {
     "node": ">=18.0.0",
