--- a/configs/tsconfig.base.json
+++ b/configs/tsconfig.base.json
@@ -30,12 +30,5 @@
       "@/configs/*": ["../configs/*"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "out",
-    ".next",
-    ".turbo"
-  ]
+  "exclude": ["node_modules", "dist", "build", "out", ".next", ".turbo"]
 }
