--- a/configs/tsconfig.node.json
+++ b/configs/tsconfig.node.json
@@ -8,10 +8,7 @@
     "types": ["node"],
     "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "../**/*.ts",
-    "../**/*.js"
-  ],
+  "include": ["../**/*.ts", "../**/*.js"],
   "exclude": [
     "../node_modules",
     "../dist",
