--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,12 +38,5 @@
     "**/*.jsx",
     ".next/types/**/*.ts"
   ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "build",
-    "out",
-    ".next",
-    ".turbo"
-  ]
+  "exclude": ["node_modules", "dist", "build", "out", ".next", ".turbo"]
 }
