--- a/configs/tsconfig.react.json
+++ b/configs/tsconfig.react.json
@@ -6,10 +6,5 @@
     "jsx": "react-jsx",
     "types": ["react", "react-dom"]
   },
-  "include": [
-    "../**/*.ts",
-    "../**/*.tsx",
-    "../**/*.js",
-    "../**/*.jsx"
-  ]
+  "include": ["../**/*.ts", "../**/*.tsx", "../**/*.js", "../**/*.jsx"]
 }
