--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,17 +1,17 @@
 packages:
-  - 'apps/*'
-  - 'packages/*'
-  - 'libs/*'
-  - 'configs/*'
-  - 'docs'
-  - 'templates/*'
-  - 'examples/*'
-  - 'services/*'
-  - 'components/*'
-  - 'utils/*'
-  - 'types/*'
-  - 'schemas/*'
-  - 'tests/*'
-  - 'scripts/*'
-  - 'plugins/*'
-  - 'themes/*'
+  - "apps/*"
+  - "packages/*"
+  - "libs/*"
+  - "configs/*"
+  - "docs"
+  - "templates/*"
+  - "examples/*"
+  - "services/*"
+  - "components/*"
+  - "utils/*"
+  - "types/*"
+  - "schemas/*"
+  - "tests/*"
+  - "scripts/*"
+  - "plugins/*"
+  - "themes/*"
