--- a/services/backend/tsconfig.json
+++ b/services/backend/tsconfig.json
@@ -24,6 +24,6 @@
       "@/utils/*": ["../../utils/*"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test"]
+  "include": ["src/**/*", "test/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
