--- a/types/package.json
+++ b/types/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "type-check": "tsc --noEmit"
   },
-  "keywords": ["types", "typescript", "shared"],
+  "keywords": [
+    "types",
+    "typescript",
+    "shared"
+  ],
   "license": "ISC"
 }
