--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -7,14 +7,18 @@
     "index.js",
     "react.js",
     "node.js",
-    "typescript.js"
+    "typescript.js",
+    "next.js",
+    "turbo.js"
   ],
   "keywords": [
     "eslint",
     "eslint-config",
     "typescript",
     "react",
-    "node"
+    "node",
+    "next",
+    "turbo"
   ],
   "license": "ISC",
   "peerDependencies": {
@@ -22,14 +26,16 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.20.0",
-    "@typescript-eslint/parser": "^8.20.0",
-    "eslint-config-prettier": "^10.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint-config-next": "15.3.4",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-config-turbo": "^2.5.4",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-prettier": "^5.2.2"
+    "eslint-plugin-prettier": "^5.2.2",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^9.30.0",
