--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "next": "15.3.4",
+    "@nexus/ui": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5",
