--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -18,7 +18,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "next": "15.3.4",
-    "@nexus/ui": "workspace:*"
+    "@nexus/ui": "workspace:*",
+    "@nexus/shared-types": "workspace:*",
+    "@nexus/shared-utils": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5",
