--- a/services/backend/.dockerignore
+++ b/services/backend/.dockerignore
@@ -1,23 +1,27 @@
 # =============================================================================
-# Docker ignore file for NestJS Backend Application
+# Docker ignore file for NestJS Backend Service
 # =============================================================================
-# Excludes unnecessary files from Docker build context for faster builds
+# Optimized for multi-stage build focusing on dist, node_modules, and prisma
 
-# Dependencies
-node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Build outputs
+# Build outputs (will be copied from builder stage)
 dist/
-build/
+
+# Dependencies (will be installed in builder stage)
+node_modules/
+
+# Development files
+src/
+test/
+coverage/
+*.test.ts
+*.spec.ts
+jest.config.js
+tsconfig.json
+tsconfig.build.json
 
 # Environment files
-.env
-.env*.local
-.env.production
+.env*
+!.env.example
 
 # IDE and editor files
 .vscode/
@@ -28,60 +32,19 @@ build/
 
 # OS generated files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Logs
-logs
+logs/
 *.log
+npm-debug.log*
+pnpm-debug.log*
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# ESLint cache
-.eslintcache
-
-# Prettier cache
-.prettiercache
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
 
 # Temporary folders
 tmp/
@@ -94,42 +57,44 @@ temp/
 # Docker
 Dockerfile*
 .dockerignore
+docker-compose*.yml
 
 # Documentation
 README.md
 *.md
-
-# Test files
-**/*.test.*
-**/*.spec.*
-__tests__/
-test/
-tests/
 
 # Linting and formatting
 .eslintrc*
 .prettierrc*
 .editorconfig
 
-# TypeScript
-*.tsbuildinfo
+# Cache directories
+.npm/
+.eslintcache
+.prettiercache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
 
 # Turbo
 .turbo/
 
-# Database
-*.db
-*.sqlite
-
-# Uploads (will be mounted as volume)
+# Uploads directory (will be created in container)
 uploads/
 
-# Local development
-.local
-
-# Prisma migrations (included selectively)
-# prisma/migrations/
+# Database files
+*.db
+*.sqlite
 
 # Backup files
 *.backup
 *.bak
+
+# Local development
+.local
