--- a/apps/frontend/.dockerignore
+++ b/apps/frontend/.dockerignore
@@ -1,27 +1,30 @@
 # =============================================================================
 # Docker ignore file for Next.js Frontend Application
 # =============================================================================
-# Excludes unnecessary files from Docker build context for faster builds
+# Optimized for multi-stage build with standalone output
 
-# Dependencies
-node_modules
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-# Next.js build outputs
+# Build outputs (will be copied from builder stage)
 .next/
 out/
 
-# Production build
-build/
-dist/
+# Dependencies (will be installed in builder stage)
+node_modules/
+
+# Development files
+src/
+components/
+pages/
+styles/
+*.test.ts
+*.test.tsx
+*.spec.ts
+*.spec.tsx
+jest.config.js
+tsconfig.json
 
 # Environment files
-.env
-.env*.local
-.env.production
+.env*
+!.env.example
 
 # IDE and editor files
 .vscode/
@@ -32,24 +35,20 @@ dist/
 
 # OS generated files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Logs
-logs
 *.log
+npm-debug.log*
+pnpm-debug.log*
 
 # Runtime data
-pids
+pids/
 *.pid
 *.seed
 *.pid.lock
 
-# Coverage directory used by tools like istanbul
+# Coverage directory
 coverage/
 *.lcov
 
@@ -65,36 +64,6 @@ coverage/
 # Stylelint cache
 .stylelintcache
 
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Storybook build outputs
-.out
-.storybook-out
-storybook-static
-
 # Temporary folders
 tmp/
 temp/
@@ -106,31 +75,43 @@ temp/
 # Docker
 Dockerfile*
 .dockerignore
+docker-compose*.yml
 
 # Documentation
 README.md
 *.md
-
-# Test files
-**/*.test.*
-**/*.spec.*
-__tests__/
-test/
-tests/
 
 # Linting and formatting
 .eslintrc*
 .prettierrc*
 .editorconfig
 
-# TypeScript
-*.tsbuildinfo
+# Cache directories
+.npm/
+.yarn/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
 
 # Turbo
 .turbo/
 
 # Vercel
-.vercel
+.vercel/
+
+# Storybook
+.storybook/
+storybook-static/
 
 # Local development
 .local
+
+# Backup files
+*.backup
+*.bak
